# greek-anki-deck-builder

./: .gitignore  CLAUDE.md  Greek_top_1556.apkg  design.md  freq_list_src.csv  pyproject.toml
greek_anki/: __main__.py  anki_deck.py  card_cache.py  claude_generator.py  cli.py  config.py  freq_list.py  matcher.py
prompts/: card_prompt.txt
